src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/UnexpectedResourceType/Entity/ResourceX.php
<?php

namespace Invalid\UnexpectedResourceType\Entity;

/*
 * Doesn't extend Claroline\CoreBundle\Entity\Resource\AbstractResource
 */
class ResourceX 
{
}